experimental/ir/testdata/fields/import_private.proto.yaml.stderr.txt
warning: unused import "b.proto"
  --> b.proto:4:8
   |
 4 | import "a.proto";
   |        ^^^^^^^^^ no symbol depends on this file
  help: delete it
   |
 4 | - import "a.proto";
   |

warning: unused import "c.proto"
  --> c.proto:4:8
   |
 4 | import "b.proto";
   |        ^^^^^^^^^ no symbol depends on this file
  help: delete it
   |
 4 | - import "b.proto";
   |

error: cannot find `M` in this scope
  --> c.proto:7:3
   |
 7 |   M m1 = 1;
   |   ^ not found in this scope
   = help: the full name of this scope is `test.N`

error: cannot find `test.M` in this scope
  --> c.proto:8:3
   |
 8 |   test.M m2 = 2;
   |   ^^^^^^ not found in this scope
   = help: the full name of this scope is `test.N`

error: cannot find `.test.M` in this scope
  --> c.proto:9:3
   |
 9 |   .test.M m3 = 3;
   |   ^^^^^^^ not found in this scope
   = help: the full name of this scope is `test.N`

encountered 3 errors and 2 warnings
